--- a/client/package.json
+++ b/client/package.json
@@ -1,65 +1,21 @@
 {
-  "name": "Starter-kit",
-  "version": "1.0.0",
-  "description": "CRM Dashboard for Bigney Law",
-  "main": "index.js",
-  "repository": "https://github.com/portillaj/starter-kit",
-  "scripts": {
-    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
-    "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive ./test",
-    "test:watch": "npm run test -- --watch",
-    "lint": "esw webpack.config.* src tools --color",
-    "lint:watch": "npm run lint -- --watch"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "babel-core": "^6.2.1",
-    "babel-eslint": "^8.2.1",
-    "babel-loader": "^7.1.2",
-    "babel-preset-es2015": "^6.1.18",
-    "babel-preset-react": "^6.1.18",
-    "chai": "^4.1.2",
-    "chai-jquery": "^2.0.0",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.6.1",
-    "file-loader": "^1.1.7",
-    "image-webpack-loader": "^4.1.0",
-    "jquery": "^3.3.1",
-    "jsdom": "^11.6.2",
-    "mocha": "^5.0.1",
-    "react-addons-test-utils": "^15.6.2",
-    "webpack": "^3.11.0",
-    "webpack-dev-server": "^2.11.1"
+  "name": "client",
+  "version": "0.1.0",
+  "private": true,
+    "proxy": {
+    "/auth/google": {
+      "target": "http://localhost:5000"
+    }
   },
   "dependencies": {
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-preset-stage-1": "^6.1.18",
-    "body-parser": "^1.18.2",
-    "bootstrap": "^4.0.0",
-    "concurrently": "^3.5.1",
-    "cross-env": "^5.1.3",
-    "css-loader": "^0.28.9",
-    "eslint": "^4.18.0",
-    "express": "^4.16.2",
-    "lodash": "^4.17.5",
-    "mongoose": "^5.0.6",
-    "morgan": "^1.9.0",
-    "node-sass": "^4.7.2",
-    "nodemon": "^1.15.1",
-    "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-redux": "5.0.6",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
-    "redux": "^3.0.4",
-    "redux-form": "^7.2.3",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.20.2"
+    "react-scripts": "1.1.1"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   }
 }
