--- a/package.json
+++ b/package.json
@@ -5,8 +5,13 @@
   "main": "server.js",
   "dependencies": {
     "concurrently": "^3.5.1",
+    "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.2",
-    "nodemon": "^1.15.1"
+    "mongoose": "^5.0.10",
+    "mysql": "^2.15.0",
+    "nodemon": "^1.15.1",
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "^1.0.0"
   },
   "devDependencies": {},
   "scripts": {
