--- a/client/package.json
+++ b/client/package.json
@@ -2,15 +2,22 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-    "proxy": {
+  "proxy": {
     "/auth/google": {
       "target": "http://localhost:5000"
     }
   },
   "dependencies": {
+    "bootstrap": "^4.0.0",
+    "prop-types": "^15.6.1",
     "react": "^16.2.0",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.1.1"
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.1.1",
+    "redux": "^3.7.2",
+    "redux-form": "^7.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
