--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "mysql": "^2.15.0",
     "nodemon": "^1.15.1",
     "passport": "^0.4.0",
-    "passport-google-oauth20": "^1.0.0"
+    "passport-google-oauth20": "^1.0.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {},
   "scripts": {
