--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-loader": "^2.0.0"
+  },
   "scripts": {
     "client-install": "cd client && npm install",
     "start": "node server.js",
