--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
     "react-scripts": "1.1.1",
     "react-spinners": "^0.3.1",
     "redux": "^3.7.2",
-    "redux-form": "^7.3.0"
+    "redux-form": "^7.3.0",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
