--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "passport-google-oauth20": "^1.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^5.0.0"
+    "passport-local-mongoose": "^5.0.0",
+    "redux-logger": "^3.0.6"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
