--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.0",
+    "prettier": "^1.12.0",
     "redux-logger": "^3.0.6"
   },
   "devDependencies": {
@@ -33,7 +34,7 @@
     "start": "node server.js",
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\" \npm run format\""
   },
   "keywords": [],
   "author": "",
